Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4893

Scrollbar for Qt version appears too late

XMLWordPrintable

      1. Open the Options dialog, Qt4.
      2. Type more and more characters into the name edit of a Qt version.
        The name column will become wider and wider. Thus, the qmake paths don't fit the window anymore but there's no scrollbar to make them visible again:
      3. Keep typing more characters.
        At some point a scroll bar will appear, but this does not enable showing all the qmake paths:

      Instead, the scrollbar should appear just when the qmake paths grow out of the window.

      If this is a bug in Qt itself, please reassign it.

        1. noscroll.png
          55 kB
          Robert Löhning
        2. scroll.png
          54 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes