Fix version dialog ui

Task-Nr: QTCREATORBUG-4893